--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   db:
     image: postgres:latest
-    env_file: .env
+    env_file: .env.production
     ports:
       - "5434:5432"
     volumes:
@@ -10,7 +10,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    env_file: .env
+    env_file: .env.production
     depends_on:
       - db
     ports:
