Adds test service to Docker Compose
Enables running tests in an isolated container environment by introducing a dedicated test service. Improves workflow consistency and simplifies running automated tests alongside other services.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,16 @@ services:
     volumes:
       - ./:/app
 
+  test:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    env_file: .env.production
+    depends_on:
+      - db
+    volumes:
+      - ./:/app
+    command: ["pytest"]
+
 volumes:
   db_data:
