--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,13 @@ services:
   db:
     image: postgres:latest
     env_file: .env.production
+    command: ["postgres", "-c", "shared_preload_libraries=pg_stat_statements"]
     ports:
       - "5434:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
+      - ./init.db.sh:/docker-entrypoint-initdb.d/init.db.sh
+
   app:
     build:
       context: .
@@ -27,6 +30,9 @@ services:
       - db
     volumes:
       - ./:/app
+    working_dir: /app
+    environment:
+      - PYTHONPATH=/app
     command: ["pytest"]
 
 volumes:
