--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,64 +1,40 @@
 services:
   db:
     image: postgres:16.2-alpine
-    env_file: .env
+    env_file: ./backend/.env
     command: ["postgres", "-c", "shared_preload_libraries=pg_stat_statements"]
     ports:
       - "5434:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
-      - ./init.db.sh:/docker-entrypoint-initdb.d/init.db.sh
-    restart: always
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    deploy:
-      resources:
-        limits:
-          cpus: "0.25"
-          memory: 256M
+      - ./backend/init.db.sh:/docker-entrypoint-initdb.d/init.db.sh
 
   app:
     build:
-      context: .
+      context: ./backend
       dockerfile: Dockerfile
-    env_file: .env
+    env_file: ./backend/.env
     depends_on:
       - db
     ports:
       - "8000:8000"
     volumes:
-      - ./src:/app/src
-      - ./tests:/app/tests
-    restart: always
-    environment:
-      - DISABLE_DOCS=0
-    deploy:
-      resources:
-        limits:
-          cpus: "0.25"
-          memory: 256M
+      - ./backend/app/src:/app/src
+      - ./backend/tests:/app/tests
 
   test:
     build:
-      context: .
+      context: ./backend
       dockerfile: Dockerfile
-    env_file: .env
+    env_file: ./backend/.env
     depends_on:
       - db
     volumes:
-      - ./:/app
+      - ./backend:/app
     working_dir: /app
     environment:
       - PYTHONPATH=/app
     command: ["pytest"]
-    deploy:
-      resources:
-        limits:
-          cpus: "0.25"
-          memory: 256M
 
 volumes:
   db_data:
