--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,13 +1,13 @@
 services:
   db:
     image: postgres:16.2-alpine
-    env_file: .env.production
+    env_file: ./backend/.env.production
     command: ["postgres", "-c", "shared_preload_libraries=pg_stat_statements"]
     ports:
       - "5434:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
-      - ./init.db.sh:/docker-entrypoint-initdb.d/init.db.sh
+      - ./backend/init.db.sh:/docker-entrypoint-initdb.d/init.db.sh
     restart: always
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER"]
@@ -22,9 +22,9 @@ services:
 
   app:
     build:
-      context: .
+      context: ./backend
       dockerfile: Dockerfile
-    env_file: .env.production
+    env_file: ./backend/.env.production
     depends_on:
       - db
     ports:
