Separates backend and frontend into distinct services
Splits the application into dedicated backend and frontend services,
improving modularity and deployment flexibility. Updates naming for
clarity and adds resource constraints for the new frontend service.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -20,7 +20,7 @@ services:
           cpus: "0.25"
           memory: 256M
 
-  app:
+  app-backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
@@ -32,6 +32,20 @@ services:
     restart: always
     environment:
       - DISABLE_DOCS=1
+    deploy:
+      resources:
+        limits:
+          cpus: "0.25"
+          memory: 256M
+
+  app-frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    env_file: ./frontend/.env.production
+    ports:
+      - "3000:3000"
+    restart: always
     deploy:
       resources:
         limits:
