Waits for database before running tests
Ensures the test suite only starts after the database service is available,
preventing race conditions and reducing test failures due to missing dependencies.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     working_dir: /app
     environment:
       - PYTHONPATH=/app
-    command: ["pytest"]
+    command: ["./wait-for-it.sh", "db:5432", "--timeout=30", "--", "pytest"]
 
   app-frontend:
     build:
