--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      target: dev
     env_file: ./frontend/.env
     ports:
       - "3000:3000"
