--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,7 +7,7 @@ services:
       - "5434:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
-      - ./backend/init.db.sh:/docker-entrypoint-initdb.d/init.db.sh
+      # init script should be baked into the image for reliable execution in Linux environments
     restart: always
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER"]
