--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   db:
-    image: postgres:16.2-alpine
+    build:
+      context: .
+      dockerfile: backend/postgres-init/Dockerfile
     env_file: ./backend/.env
     command: ["postgres", "-c", "shared_preload_libraries=pg_stat_statements"]
     ports:
