Avoids Windows mount issues by baking init script into image
Moves the database initialization script into the custom image
to prevent Windows-specific problems with file mounting and
execution permissions during container startup.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "5434:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
-      - ./backend/init.db.sh:/docker-entrypoint-initdb.d/init.db.sh
+      # init script is baked into custom image to avoid Windows mount/exec-bit issues
 
   app-backend:
     build:
