Adds environment variable to enable migrations in backend
Introduces an environment variable to control the execution of migrations when the backend container starts, improving configurability for deployment and local development workflows.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     volumes:
       - ./backend/app/src:/app/src
       - ./backend/tests:/app/tests
+    environment:
+      - RUN_MIGRATIONS=1
 
   test:
     build:
