Updates service volumes for granular backend mapping
Separates backend source, tests, and environment file into distinct
volume mounts for improved container organization and easier management
of code, test assets, and environment variables.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,9 @@ services:
     depends_on:
       - db
     volumes:
-      - ./backend:/app
+      - ./backend/app/src:/app/src
+      - ./backend/tests:/app/tests
+      - ./backend/.env:/app/.env
     working_dir: /app
     environment:
       - PYTHONPATH=/app
