Switches test service to use entrypoint for startup
Updates service configuration to use an entrypoint array instead of a command for launching the test runner, improving control over script execution and argument parsing during container startup.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,13 @@ services:
     working_dir: /app
     environment:
       - PYTHONPATH=/app
-    command: ["./wait-for-it.sh", "db:5432", "--timeout=30", "--", "pytest"]
+    entrypoint:
+      - bash
+      - /app/wait-for-it.sh
+      - db:5432
+      - --timeout=30
+      - --
+      - pytest
 
   app-frontend:
     build:
