--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,10 +7,9 @@ services:
       - "5434:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
-      # init script should be baked into the image for reliable execution in Linux environments
     restart: always
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres}"]
       interval: 10s
       timeout: 5s
       retries: 5
